🎉 Release v3.6.0: 项目更名为 AI Timeline，优化收藏功能和图片识别
✨ 新功能：
- 项目更名为 'AI Timeline'
- 为 Grok 添加收藏整个聊天功能
- 收藏按钮始终显示，根据收藏状态显示不同颜色（橙色/灰色）
- 当消息没有文字内容时，默认显示 '[图片或文件]'

🌐 国际化：
- 更新所有 52 个语言包的扩展名称和描述
- 优化中文描述，增加功能亮点说明

🐛 问题修复：
- 修复 Grok 默认标题包含 ' - Grok' 后缀的问题
- 修复图片/文件消息在时间轴中无文本显示的问题

📦 其他：
- 版本号从 3.5.0 升级到 3.6.0
- 更新打包文件名称

--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Interaktiv tidslinje til ChatGPT, Gemini, DeepSeek osv."
+    "message": "AI Timeline - Interaktiv tidslinje til ChatGPT, Gemini, DeepSeek osv."
   },
   "extDescription": {
-    "message": "Interaktiv tidslinje til AI-chats. Spring til samtaler, bogmærk vigtige chats og kopier LaTeX-formler med lethed."
+    "message": "Transformer dine AI-samtaler til interaktive tidslinjer. 🚀 Hurtig forhåndsvisning og navigation, 📌 markér nøgledialoger, ⭐️ favoritter vigtige chats, ❤️ kopiér LaTeX-formler, fordobl din effektivitet!"
   },
   "viewStarred": {
     "message": "Vis favoritter"
