--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Διαδραστικό χρονολόγιο για ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Διαδραστικό χρονολόγιο για ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Διαδραστική χρονολογία AI. Μεταβείτε σε συνομιλίες, προσθέστε σημαντικές και αντιγράψτε LaTeX εύκολα."
+    "message": "Μετατρέψτε τις συνομιλίες σας με AI σε διαδραστικά χρονολόγια. 🚀 Γρήγορη προεπισκόπηση και πλοήγηση, 📌 επισήμανση κύριων διαλόγων, ⭐️ αγαπημένες σημαντικές συνομιλίες, ❤️ αντιγραφή τύπων LaTeX, διπλασιάστε την αποδοτικότητά σας!"
   },
   "viewStarred": {
     "message": "Προβολή αγαπημένων"
