--- a/_locales/is/messages.json
+++ b/_locales/is/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Gagnvirk tímalína fyrir ChatGPT, Gemini, DeepSeek o.fl."
+    "message": "AI Timeline - Gagnvirk tímalína fyrir ChatGPT, Gemini, DeepSeek o.fl."
   },
   "extDescription": {
-    "message": "Gagnvirk tímalína fyrir AI spjöll. Hoppaðu í samtöl, bókamerktu mikilvæg spjöll og afritaðu LaTeX formúlur auðveldlega."
+    "message": "Umbreyttu AI samræðum þínum í gagnvirkar tímalínur. 🚀 Fljót forskoðun og stökk, 📌 merkja lykilsamræður, ⭐️ uppáhalds mikilvæg spjöll, ❤️ afrita LaTeX formúlur, tvöfalda skilvirkni þína!"
   },
   "viewStarred": {
     "message": "Skoða eftirlæti"
