--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ინტერაქტიული დროის ხაზი ChatGPT, Gemini, DeepSeek-სთვის"
+    "message": "AI Timeline - ინტერაქტიული დროის ხაზი ChatGPT, Gemini, DeepSeek-სთვის"
   },
   "extDescription": {
-    "message": "ინტერაქტიული ხაზი AI-სთვის. გადახვიდეთ საუბრებზე, დაამატეთ სანიშნეებში და დააკოპირეთ LaTeX."
+    "message": "გარდაქმენით თქვენი AI საუბრები ინტერაქტიულ დროის ხაზად. 🚀 სწრაფი გადახედვა და გადასვლა, 📌 მონიშნეთ მთავარი დიალოგები, ⭐️ ფავორიტებში დაამატეთ მნიშვნელოვანი ჩატები, ❤️ დააკოპირეთ LaTeX ფორმულები, გაორმაგეთ თქვენი ეფექტურობა!"
   },
   "viewStarred": {
     "message": "ფავორიტების ნახვა"
