--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek үшін интерактивті уақыт шкаласы"
+    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek үшін интерактивті уақыт шкаласы"
   },
   "extDescription": {
-    "message": "AI чаттары үшін интерактивті уақыт желісі. Әңгімелерге өтіңіз, маңызды чаттарды белгілеңіз және LaTeX формулаларын оңай көшіріңіз."
+    "message": "AI әңгімелерін интерактивті уақыт желісіне айналдырыңыз. 🚀 Жылдам алдын ала көру және өту, 📌 негізгі диалогтарды белгілеу, ⭐️ маңызды чаттарды таңдаулыларға қосу, ❤️ LaTeX формулаларын көшіру, тиімділігіңізді екі есе арттырыңыз!"
   },
   "viewStarred": {
     "message": "Таңдаулыларды көру"
