--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - AI 대화에 인터랙티브 타임라인 추가, ChatGPT, DeepSeek 등 지원"
+    "message": "AI Timeline - AI 대화에 인터랙티브 타임라인 추가, ChatGPT, DeepSeek 등 지원"
   },
   "extDescription": {
-    "message": "AI 채팅용 인터랙티브 타임라인. 대화로 이동, 중요한 채팅 북마크, LaTeX 수식 손쉽게 복사."
+    "message": "AI와의 대화를 인터랙티브 타임라인으로 정리. 🚀빠른 미리보기 및 이동, 📌주요 대화 표시, ⭐️중요한 채팅 즐겨찾기, ❤️LaTeX 수식 복사, 효율성 두 배!"
   },
   "viewStarred": {
     "message": "즐겨찾기 보기"
