--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Garis masa interaktif untuk ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Garis masa interaktif untuk ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Garis masa interaktif untuk sembang AI. Lompat ke perbualan, tanda buku sembang penting dan salin formula LaTeX dengan mudah."
+    "message": "Ubah perbualan AI anda menjadi garis masa interaktif. 🚀 Pratonton pantas dan navigasi, 📌 tandakan dialog utama, ⭐️ kegemaran sembang penting, ❤️ salin formula LaTeX, gandakan kecekapan anda!"
   },
   "viewStarred": {
     "message": "Lihat kegemaran"
