--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini को लागि अन्तरक्रियात्मक टाइमलाइन"
+    "message": "AI Timeline - ChatGPT, Gemini को लागि अन्तरक्रियात्मक टाइमलाइन"
   },
   "extDescription": {
-    "message": "AI च्याटका लागि टाइमलाइन। कुराकानीमा जानुहोस्, बुकमार्क गर्नुहोस् र LaTeX सूत्रहरू प्रतिलिपि गर्नुहोस्।"
+    "message": "आफ्नो AI कुराकानीलाई अन्तरक्रियात्मक टाइमलाइनमा रूपान्तरण गर्नुहोस्। 🚀 द्रुत पूर्वावलोकन र जम्प, 📌 मुख्य संवादहरू चिन्ह लगाउनुहोस्, ⭐️ महत्त्वपूर्ण च्याटहरू मनपर्नेमा राख्नुहोस्, ❤️ LaTeX सूत्रहरू प्रतिलिपि गर्नुहोस्, आफ्नो दक्षता दोब्बर बनाउनुहोस्!"
   },
   "viewStarred": {
     "message": "मनपर्ने हेर्नुहोस्"
