--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Interactieve tijdlijn voor ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Interactieve tijdlijn voor ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Interactieve tijdlijn voor AI-chats. Spring naar gesprekken, markeer belangrijke chats en kopieer eenvoudig LaTeX-formules."
+    "message": "Transformeer uw AI-gesprekken in interactieve tijdlijnen. 🚀 Snel voorbeeld en navigeren, 📌 belangrijke dialogen markeren, ⭐️ favorieten van belangrijke chats, ❤️ LaTeX-formules kopiëren, verdubbel uw efficiëntie!"
   },
   "viewStarred": {
     "message": "Favorieten bekijken"
