--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini සඳහා අන්තර්ක්‍රියාකාරී කාල රේඛාව"
+    "message": "AI Timeline - ChatGPT, Gemini සඳහා අන්තර්ක්‍රියාකාරී කාල රේඛාව"
   },
   "extDescription": {
-    "message": "AI චැට් සඳහා අන්තර්ක්‍රියාකාරී කාලරාමුව. සංවාද වෙත පනින්න, වැදගත් චැට් පිටු සලකුණු කරන්න සහ LaTeX සූත්‍ර පහසුවෙන් පිටපත් කරන්න."
+    "message": "ඔබගේ AI සංවාද අන්තර්ක්‍රියාකාරී කාල රේඛා බවට පරිවර්තනය කරන්න. 🚀 ඉක්මන් පෙරදසුන සහ පැන යන්න, 📌 ප්‍රධාන සංවාද සලකුණු කරන්න, ⭐️ වැදගත් චැට් ප්‍රියතම, ❤️ LaTeX සූත්‍ර පිටපත් කරන්න, ඔබේ කාර්යක්ෂමතාව දෙගුණ කරන්න!"
   },
   "viewStarred": {
     "message": "ප්‍රියතම බලන්න"
