--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - خط زمني تفاعلي لـ ChatGPT، Gemini، DeepSeek"
+    "message": "AI Timeline - خط زمني تفاعلي لـ ChatGPT، Gemini، DeepSeek"
   },
   "extDescription": {
-    "message": "جدول زمني تفاعلي للدردشات مع الذكاء الاصطناعي. انتقل إلى المحادثات، احفظ الدردشات المهمة، وانسخ صيغ LaTeX بسهولة."
+    "message": "حوّل محادثاتك مع الذكاء الاصطناعي إلى خطوط زمنية تفاعلية. 🚀 معاينة سريعة والانتقال، 📌 وضع علامة على الحوارات الرئيسية، ⭐️ المفضلة للدردشات المهمة، ❤️ نسخ صيغ LaTeX، ضاعف كفاءتك!"
   },
   "viewStarred": {
     "message": "عرض المفضلة"
