--- a/_locales/az/messages.json
+++ b/_locales/az/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek üçün interaktiv zaman xətti"
+    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek üçün interaktiv zaman xətti"
   },
   "extDescription": {
-    "message": "AI üçün interaktiv xətt. Söhbətlərə keçin, əlfəcinləşdirin və LaTeX-i kopyalayın."
+    "message": "AI söhbətlərinizi interaktiv zaman xəttinə çevirin. 🚀 Sürətli önbaxış və keçid, 📌 əsas dialoqları qeyd edin, ⭐️ vacib söhbətləri sevimlilərdə saxlayın, ❤️ LaTeX formullarını kopyalayın, səmərəliliyinizi ikiqat artırın!"
   },
   "viewStarred": {
     "message": "Sevimliləri göstər"
