--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Интерактивна времева линия за ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Интерактивна времева линия за ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Интерактивна времева линия за AI чатове. Преминете към разговори, отбележете важни чатове и копирайте LaTeX формули с лекота."
+    "message": "Трансформирайте вашите AI разговори в интерактивни времеви линии. 🚀 Бърз преглед и навигация, 📌 маркирайте ключови диалози, ⭐️ любими важни чатове, ❤️ копирайте LaTeX формули, удвоете ефективността си!"
   },
   "viewStarred": {
     "message": "Преглед на любими"
