--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek এর জন্য ইন্টারেক্টিভ টাইমলাইন"
+    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek এর জন্য ইন্টারেক্টিভ টাইমলাইন"
   },
   "extDescription": {
-    "message": "AI চ্যাটের জন্য ইন্টারঅ্যাক্টিভ টাইমলাইন। কথোপকথনে যান, গুরুত্বপূর্ণ চ্যাট বুকমার্ক করুন এবং LaTeX সূত্র সহজে কপি করুন।"
+    "message": "আপনার AI কথোপকথনকে ইন্টারেক্টিভ টাইমলাইনে রূপান্তর করুন। 🚀 দ্রুত প্রিভিউ এবং জাম্প, 📌 মূল ডায়ালগ চিহ্নিত করুন, ⭐️ গুরুত্বপূর্ণ চ্যাট পছন্দের তালিকায় যুক্ত করুন, ❤️ LaTeX সূত্র কপি করুন, আপনার দক্ষতা দ্বিগুণ করুন!"
   },
   "viewStarred": {
     "message": "প্রিয় দেখুন"
