--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Interaktivní časová osa pro ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Interaktivní časová osa pro ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Interaktivní časová osa pro AI chaty. Přeskakujte na konverzace, označujte důležité chaty a snadno kopírujte LaTeX vzorce."
+    "message": "Přeměňte své AI konverzace na interaktivní časové osy. 🚀 Rychlý náhled a navigace, 📌 označte klíčové dialogy, ⭐️ oblíbené důležité chaty, ❤️ kopírujte LaTeX vzorce, zdvojnásobte svou efektivitu!"
   },
   "viewStarred": {
     "message": "Zobrazit oblíbené"
