--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek के लिए इंटरैक्टिव टाइमलाइन"
+    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek के लिए इंटरैक्टिव टाइमलाइन"
   },
   "extDescription": {
-    "message": "AI चैट के लिए इंटरैक्टिव टाइमलाइन। बातचीत पर जाएं, महत्वपूर्ण चैट को बुकमार्क करें और LaTeX सूत्र आसानी से कॉपी करें।"
+    "message": "अपनी AI बातचीत को इंटरैक्टिव टाइमलाइन में बदलें। 🚀 त्वरित पूर्वावलोकन और नेविगेशन, 📌 मुख्य संवादों को चिह्नित करें, ⭐️ महत्वपूर्ण चैट को पसंदीदा में जोड़ें, ❤️ LaTeX सूत्र कॉपी करें, अपनी दक्षता दोगुनी करें!"
   },
   "viewStarred": {
     "message": "पसंदीदा देखें"
