--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Interaktivna vremenska linija za ChatGPT, Gemini"
+    "message": "AI Timeline - Interaktivna vremenska linija za ChatGPT, Gemini"
   },
   "extDescription": {
-    "message": "Interaktivna vremenska traka za AI chatove. Skočite na razgovore, označite važne chatove i lako kopirajte LaTeX formule."
+    "message": "Pretvorite svoje AI razgovore u interaktivne vremenske linije. 🚀 Brzi pregled i navigacija, 📌 označite ključne dijaloge, ⭐️ favoriti važnih chatova, ❤️ kopirajte LaTeX formule, udvostručite svoju učinkovitost!"
   },
   "viewStarred": {
     "message": "Pogledaj favorite"
