--- a/_locales/hy/messages.json
+++ b/_locales/hy/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Ինտերակտիվ ժամանակացույց ChatGPT, Gemini, DeepSeek համար"
+    "message": "AI Timeline - Ինտերակտիվ ժամանակացույց ChatGPT, Gemini, DeepSeek համար"
   },
   "extDescription": {
-    "message": "Ինտերակտիվ ժամանակացույց AI զրույցների համար: Անցեք զրույցների, նշեք կարևոր զրույցները և հեշտությամբ պատճենեք LaTeX բանաձևերը:"
+    "message": "Վերածեք ձեր AI զրույցները ինտերակտիվ ժամանակացույցի: 🚀 Արագ նախադիտում և անցում, 📌 նշեք հիմնական երկխոսությունները, ⭐️ նախընտրյալներում ավելացրեք կարևոր զրույցները, ❤️ պատճենեք LaTeX բանաձևերը, կրկնապատկեք ձեր արդյունավետությունը!"
   },
   "viewStarred": {
     "message": "Դիտել ընտրանին"
