--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Interaktīva laika skala ChatGPT, Gemini, DeepSeek u.c."
+    "message": "AI Timeline - Interaktīva laika skala ChatGPT, Gemini, DeepSeek u.c."
   },
   "extDescription": {
-    "message": "Interaktīva laika līnija AI. Pārejiet uz sarunām, pievienojiet grāmatzīmēs un kopējiet LaTeX formulas."
+    "message": "Pārveidojiet savas AI sarunas par interaktīvām laika līnijām. 🚀 Ātra priekšskatīšana un navigācija, 📌 atzīmēt galvenos dialogus, ⭐️ favorīti svarīgās sarunas, ❤️ kopēt LaTeX formulas, divkāršot efektivitāti!"
   },
   "viewStarred": {
     "message": "Skatīt izlasi"
