--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - ChatGPT, Gemini, DeepSeek အတွက် အပြန်အလှန်အချိန်ဇယား"
+    "message": "AI Timeline - ChatGPT, Gemini, DeepSeek အတွက် အပြန်အလှန်အချိန်ဇယား"
   },
   "extDescription": {
-    "message": "AI စကားပြောခန်းများအတွက် timeline။ သွားပါ၊ bookmark လုပ်ပါ နှင့် LaTeX ကူးယူပါ။"
+    "message": "သင်၏ AI စကားပြောမှုများကို အပြန်အလှန် timeline များအဖြစ် ပြောင်းလဲပါ။ 🚀 အမြန် preview နှင့် ခုန်ရန်, 📌 အဓိက စကားပြောချက်များကို မှတ်သားပါ, ⭐️ အရေးကြီးသော စကားပြောခန်းများကို အကြိုက်ဆုံးတွင် သိမ်းပါ, ❤️ LaTeX ပုံသေနည်းများကို ကူးယူပါ, သင်၏ စွမ်းဆောင်ရည်ကို နှစ်ဆတိုးပါ!"
   },
   "viewStarred": {
     "message": "အကြိုက်ဆုံးများကြည့်ရန်"
