--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Cronologie interactivă pentru ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Cronologie interactivă pentru ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Cronologie interactivă pentru AI. Săriți la conversații, marcați chat-uri și copiați formule LaTeX."
+    "message": "Transformați conversațiile AI în cronologii interactive. 🚀 Previzualizare rapidă și navigare, 📌 marcați dialogurile cheie, ⭐️ favorite chat-uri importante, ❤️ copiați formule LaTeX, dublați-vă eficiența!"
   },
   "viewStarred": {
     "message": "Vezi favoritele"
