--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Интерактивная хронология для ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Интерактивная хронология для ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Интерактивная шкала для AI-чатов. Переходите к разговорам, закладки и копируйте формулы LaTeX."
+    "message": "Превратите ваши разговоры с ИИ в интерактивные хронологии. 🚀 Быстрый просмотр и навигация, 📌 отметить ключевые диалоги, ⭐️ избранные важные чаты, ❤️ копировать формулы LaTeX, удвойте свою эффективность!"
   },
   "viewStarred": {
     "message": "Просмотр избранного"
