--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Interaktívna časová os pre ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Interaktívna časová os pre ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Interaktívna časová os pre AI chaty. Preskočte na konverzácie, označte dôležité chaty a jednoducho kopírujte LaTeX vzorce."
+    "message": "Premeňte svoje AI konverzácie na interaktívne časové osi. 🚀 Rýchly náhľad a navigácia, 📌 označte kľúčové dialógy, ⭐️ obľúbené dôležité chaty, ❤️ kopírujte LaTeX vzorce, zdvojnásobte svoju efektivitu!"
   },
   "viewStarred": {
     "message": "Zobraziť obľúbené"
