--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Інтерактивна хронологія для ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Інтерактивна хронологія для ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Інтерактивна часова шкала для AI-чатів. Переходьте до розмов, додавайте важливі чати до закладок та легко копіюйте формули LaTeX."
+    "message": "Перетворіть ваші AI-розмови на інтерактивні хронології. 🚀 Швидкий перегляд та навігація, 📌 позначте ключові діалоги, ⭐️ улюблені важливі чати, ❤️ копіюйте формули LaTeX, подвойте свою ефективність!"
   },
   "viewStarred": {
     "message": "Переглянути вибране"
