--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - Dòng thời gian tương tác cho ChatGPT, Gemini, DeepSeek"
+    "message": "AI Timeline - Dòng thời gian tương tác cho ChatGPT, Gemini, DeepSeek"
   },
   "extDescription": {
-    "message": "Dòng thời gian cho AI chats. Chuyển đến cuộc trò chuyện, đánh dấu và sao chép LaTeX dễ dàng."
+    "message": "Biến các cuộc trò chuyện AI của bạn thành dòng thời gian tương tác. 🚀 Xem trước nhanh và điều hướng, 📌 đánh dấu các cuộc hội thoại chính, ⭐️ yêu thích các cuộc trò chuyện quan trọng, ❤️ sao chép công thức LaTeX, tăng hiệu quả gấp đôi!"
   },
   "viewStarred": {
     "message": "Xem yêu thích"
