--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1,9 +1,9 @@
 {
   "extName": {
-    "message": "AI Chat Timeline - 给 AI 对话添加交互式时间轴，支持 ChatGPT、Gemini、DeepSeek、Claude 等"
+    "message": "AI Timeline - 为 AI 对话添加交互式时间轴，支持 ChatGPT、Gemini、DeepSeek、Claude 等"
   },
   "extDescription": {
-    "message": "让你使用 AI 聊天的效率翻倍！通过交互式时间轴，🚀轻松跳转至任意对话，📌长按标记重要对话，⭐️收藏聊天，❤️复制 LaTeX 公式。"
+    "message": "把你跟 AI 的对话整理成可交互时间轴，🚀快速预览并跳转、📌标记重点对话、⭐️收藏重要聊天、❤️复制 LaTeX 公式，让效率翻倍！"
   },
   "viewStarred": {
     "message": "查看收藏"
