feat: v3.6.0 - 重构代码结构，增强公式复制功能
✨ 新功能
- 支持维基百科公式复制（MathML 格式，自动清理 {\displaystyle} 包装）
- 支持 MathJax 公式复制（从 script[type='math/tex'] 提取）
- 收藏按钮始终显示，颜色区分有无收藏数据（橙色/灰色）
- 优化时间轴节点可视区域检测逻辑（部分可见即可）

🏗️ 代码重构
- 创建 js/global/ 目录：存放全局 UI 组件（tooltip-manager, toast-manager）
- 创建 js/formula/ 目录：独立的公式模块，支持所有网站
  - latex-extractor.js：统一的 LaTeX 提取逻辑（10种提取方式）
  - formula-manager.js：公式交互管理
  - index.js：自动初始化
- 创建 js/timeline/ 目录：时间轴业务逻辑
  - constants.js：平台配置常量（优化数据结构，避免重复）
  - adapters/：平台适配器
  - common.js, container-finder.js, timeline-manager.js, index.js

🐛 修复
- 修复 Grok 默认标题包含 ' - Grok' 后缀的问题
- 修复图片/文件消息无文本时不显示的问题（显示 [图片或文件]）

📦 其他
- 更新扩展名称为 'AI Timeline'
- 更新扩展描述，突出核心功能
- 同步 52 种语言的本地化文件

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,7 +3,7 @@
     "message": "AI Timeline - Interactive timeline for ChatGPT, Gemini, DeepSeek, etc."
   },
   "extDescription": {
-    "message": "Transform your AI conversations into interactive timelines. 🚀 Quick preview and jump, 📌 mark key dialogues, ⭐️ favorite important chats, ❤️ copy LaTeX formulas, double your efficiency!"
+    "message": "Transform your AI conversations into interactive timelines. 🚀Quick preview and jump, ❤️copy LaTeX formulas, double your efficiency!"
   },
   "viewStarred": {
     "message": "View starred"
