chore: 优化中文文案表达

--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "如果对您有帮助，欢迎推荐给朋友"
+    "message": "觉得不错的话，欢迎推荐给朋友"
   },
   "chromeWebStore": {
     "message": "Chrome 应用商店"
