i18n: 优化所有语言的分享文案，使其更简洁友好

--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "إذا كان يساعدك، لا تتردد في التوصية به لأصدقائك"
+    "message": "أعجبك؟ شاركه مع الأصدقاء!"
   },
   "chromeWebStore": {
     "message": "متجر كروم الإلكتروني"
