--- a/_locales/bn/messages.json
+++ b/_locales/bn/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "যদি এটি আপনাকে সাহায্য করে, তাহলে আপনার বন্ধুদের কাছে সুপারিশ করুন"
+    "message": "পছন্দ হয়েছে? বন্ধুদের সাথে শেয়ার করুন!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
