--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Pokud vám to pomůže, doporučte to svým přátelům"
+    "message": "Líbí se vám to? Sdílejte s přáteli!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
