--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Hvis det hjælper dig, er du velkommen til at anbefalе det til dine venner"
+    "message": "Kan du lide det? Del med venner!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
