--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Wenn es Ihnen hilft, empfehlen Sie es gerne Ihren Freunden weiter"
+    "message": "Gefällt es Ihnen? Mit Freunden teilen!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
