--- a/_locales/el/messages.json
+++ b/_locales/el/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Εάν σας βοηθά, μη διστάσετε να το συστήσετε στους φίλους σας"
+    "message": "Σας αρέσει; Μοιραστείτε το με φίλους!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
