--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Si te ayuda, no dudes en recomendarlo a tus amigos"
+    "message": "¿Te gusta? ¡Compártelo con amigos!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
