--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Kung nakatulong ito sa iyo, huwag mag-atubiling irekomenda ito sa iyong mga kaibigan"
+    "message": "Nagustuhan mo? Ibahagi sa mga kaibigan!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
