--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Si cela vous aide, n'hésitez pas à le recommander à vos amis"
+    "message": "Vous aimez ? Partagez avec vos amis !"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
