--- a/_locales/hi/messages.json
+++ b/_locales/hi/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "यदि यह आपकी मदद करता है, तो इसे अपने दोस्तों को सुझाने में संकोच न करें"
+    "message": "पसंद आया? दोस्तों के साथ शेयर करें!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
