--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ako vam pomogne, preporučite ga prijateljima"
+    "message": "Sviđa vam se? Podijelite s prijateljima!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
