--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Jika membantu Anda, jangan ragu untuk merekomendasikannya kepada teman Anda"
+    "message": "Suka? Bagikan dengan teman!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
