--- a/_locales/is/messages.json
+++ b/_locales/is/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ef það hjálpar þér, mæltu með því við vini þína"
+    "message": "Líkar þér við það? Deildu með vinum!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
