--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Se ti aiuta, sentiti libero di consigliarlo ai tuoi amici"
+    "message": "Ti piace? Condividi con gli amici!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
