--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "お役に立ちましたら、ぜひ友達におすすめください"
+    "message": "気に入ったら、ぜひ友達にシェア！"
   },
   "chromeWebStore": {
     "message": "Chrome ウェブストア"
