--- a/_locales/ka/messages.json
+++ b/_locales/ka/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "თუ ეს გეხმარებათ, გირჩიეთ თქვენს მეგობრებს"
+    "message": "მოგწონთ? გაუზიარეთ მეგობრებს!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
