--- a/_locales/kk/messages.json
+++ b/_locales/kk/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Егер бұл сізге көмектесе, достарыңызға ұсынуға тартынбаңыз"
+    "message": "Ұнады ма? Достарыңызбен бөлісіңіз!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
