--- a/_locales/km/messages.json
+++ b/_locales/km/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "ប្រសិនបើវាជួយអ្នក សូមណែនាំវាទៅកាន់មិត្តភក្តិរបស់អ្នក"
+    "message": "ចូលចិត្តទេ? ចែករំលែកជាមួយមិត្តភក្តិ!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
