--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "도움이 되셨다면 친구에게 추천해 주세요"
+    "message": "마음에 드시면 친구에게 공유해주세요!"
   },
   "chromeWebStore": {
     "message": "Chrome 웹 스토어"
