--- a/_locales/lt/messages.json
+++ b/_locales/lt/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Jei jums tai padeda, rekomenduokite draugams"
+    "message": "Patinka? Pasidalinkite su draugais!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
