--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Jika ia membantu anda, jangan ragu untuk mengesyorkannya kepada rakan anda"
+    "message": "Suka? Kongsi dengan rakan!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
