--- a/_locales/ne/messages.json
+++ b/_locales/ne/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "यदि यसले तपाईंलाई मद्दत गर्छ भने, यसलाई आफ्ना साथीहरूलाई सिफारिस गर्न नहिचकिचाउनुहोस्"
+    "message": "मन पर्यो? साथीहरूसँग साझा गर्नुहोस्!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
