--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Als het u helpt, aarzel dan niet om het aan uw vrienden aan te bevelen"
+    "message": "Bevalt het? Deel met vrienden!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
