--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Jeśli ci pomaga, polec go znajomym"
+    "message": "Podoba ci się? Podziel się ze znajomymi!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
