--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Se te ajudar, sinta-se à vontade para recomendar aos seus amigos"
+    "message": "Gostou? Compartilhe com amigos!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
