--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Se o ajudar, sinta-se à vontade para o recomendar aos seus amigos"
+    "message": "Gostou? Partilhe com amigos!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
