--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Dacă vă ajută, recomandați-l prietenilor dvs"
+    "message": "Vă place? Distribuiți prietenilor!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
