--- a/_locales/si/messages.json
+++ b/_locales/si/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "එය ඔබට උපකාර වන්නේ නම්, ඔබේ මිතුරන්ට එය නිර්දේශ කිරීමට නිදහස් වන්න"
+    "message": "කැමතිද? මිතුරන් සමඟ බෙදාගන්න!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
