--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ak vám to pomôže, odporučte to svojim priateľom"
+    "message": "Páči sa vám to? Zdieľajte s priateľmi!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
