--- a/_locales/sr/messages.json
+++ b/_locales/sr/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ако вам помогне, препоручите га пријатељима"
+    "message": "Свиђа вам се? Поделите са пријатељима!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
