--- a/_locales/th/messages.json
+++ b/_locales/th/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "หากช่วยคุณได้ อย่าลังเลที่จะแนะนำให้เพื่อนของคุณ"
+    "message": "ชอบไหม? แชร์ให้เพื่อนสิ!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
