--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Size yardımcı oluyorsa, arkadaşlarınıza önermekten çekinmeyin"
+    "message": "Beğendiniz mi? Arkadaşlarınızla paylaşın!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
