--- a/_locales/vi/messages.json
+++ b/_locales/vi/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Nếu nó giúp ích cho bạn, hãy giới thiệu nó cho bạn bè của bạn"
+    "message": "Thích không? Chia sẻ với bạn bè!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
