--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "如果對您有幫助，歡迎推薦給朋友"
+    "message": "覺得不錯的話，歡迎推薦給朋友"
   },
   "chromeWebStore": {
     "message": "Chrome 應用商店"
