--- a/_locales/az/messages.json
+++ b/_locales/az/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Sizə kömək edirsə, dostlarınıza tövsiyə etməkdən çəkinməyin"
+    "message": "Bəyəndiniz? Dostlarınızla paylaşın!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
