--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ако ви помага, препоръчайте го на приятелите си"
+    "message": "Харесва ли ви? Споделете с приятели!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
