--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "If it helps you, feel free to recommend it to your friends"
+    "message": "Like it? Share with friends!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
