--- a/_locales/fi/messages.json
+++ b/_locales/fi/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Jos se auttaa sinua, suosittele sitä ystävillesi"
+    "message": "Pidätkö siitä? Jaa ystävillesi!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
