--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "אם זה עוזר לך, אל תהסס להמליץ על זה לחברים שלך"
+    "message": "אהבת? שתף עם חברים!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
