--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ha segít neked, nyugodtan ajánld barátaidnak"
+    "message": "Tetszik? Oszd meg barátaiddal!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
