--- a/_locales/hy/messages.json
+++ b/_locales/hy/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Եթե սա օգնում է ձեզ, խորհուրդ տվեք ձեր ընկերներին"
+    "message": "Դուր է եկել? Կիսվեք ընկերների հետ!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
