--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Ja tas jums palīdz, ieteiciet to saviem draugiem"
+    "message": "Patīk? Dalieties ar draugiem!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
