--- a/_locales/my/messages.json
+++ b/_locales/my/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "သင့်ကို ကူညီပေးခဲ့ရင် သင့်သူငယ်ချင်းတွေကို အကြံပြုဖို့ လွတ်လပ်စွာ လုပ်ပါ"
+    "message": "ကြိုက်လား? သူငယ်ချင်းတွေနဲ့ မျှဝေပါ!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
