--- a/_locales/no/messages.json
+++ b/_locales/no/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Hvis det hjelper deg, anbefal det gjerne til vennene dine"
+    "message": "Liker du det? Del med venner!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
