--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Если вам это помогло, рекомендуйте друзьям"
+    "message": "Понравилось? Поделитесь с друзьями!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
