--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Om det hjälper dig, tveka inte att rekommendera det till dina vänner"
+    "message": "Gillar du det? Dela med vänner!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
