--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -72,7 +72,7 @@
     "message": "Star on GitHub"
   },
   "shareIfUseful": {
-    "message": "Якщо вам це допомогло, рекомендуйте друзям"
+    "message": "Сподобалось? Поділіться з друзями!"
   },
   "chromeWebStore": {
     "message": "Chrome Web Store"
